2011-06-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFLocale.c: Use pthread directly.
	* Source/internal.h: Delete.
	* Source/CFString.c: Added *FileSystemRepresentation functions.
	* Source/CFStringEncoding.c: Implemented more encoding functions.
	* Source/CFStringFormat.c: New file for CFString formatting functions.
	* Headers/CoreFoundation/CFByteOrder.h: Fix compile mistake.

2011-06-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFByteOrder.h: Actually swap byte order in
	CFSwappedFloat functions.

2011-06-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFByteOrder.c: Delete CFByteOrder.c.
	* Headers/CoreFoundation/CFByteOrder.h: Inline byte order functions.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Fixed a few bugs.
	* Tests/CFString/mutablestring.m: Modified tests.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented CFStringReplace().
	* Tests/CFString/mutablestring.m: Added more tests.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Use CFStringInlineBuffer where appropriate.
	Also added CFStringTimeWhitespace().
	* Source/CFStringEncoding.c: Fixed a bug uncovered by tests.
	* Tests/CFString/create.m:
	* Tests/CFString/mutablestring.m: Added a few more tests.

2011-06-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFStringEncoding.c: Fixed bugs uncovered by tests.
	* Tests/CFString/mutablestring.m: Added CFMutableString tests.

2011-06-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented a few more functions.
	* Headers/CoreFoundation/ForFoundationOnly.h: Added 2 more functions
	to be used internally by CoreFoundation and Foundation.

2011-05-31 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/internal.h: Define mutex functions to be used internally.
	* Source/CFLocale.c: